--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>📦 Ishwar Order System</title>
+  <title>Ishwar Order System</title>
   <style>
     body {
-      font-family: "Arial", sans-serif;
+      font-family: Calibri, sans-serif;
       font-size: 14px;
       margin: 0;
       padding: 0;
-      background-color: #f0f8ff; /* Light pastel blue for a calming effect */
+      background-color: #f4f4f9;
     }
 
     header {
@@ -18,71 +18,68 @@
       top: 0;
       width: 100%;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
-      background-color: #4caf50; /* Vibrant green */
+      padding: 10px;
+      background-color: #007bff;
       color: white;
       font-size: 1.5rem;
       z-index: 1000;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .header-buttons {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
 
     .header-buttons button {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      background-color: #ff9800; /* Bright orange */
+      background-color: #28a745;
       color: white;
       border: none;
-      padding: 10px 15px;
+      padding: 10px;
       cursor: pointer;
       font-size: 1rem;
-      border-radius: 8px;
     }
 
     .header-buttons button:last-child {
-      background-color: #f44336; /* Bright red */
-    }
-
-    .header-buttons button:hover {
-      opacity: 0.9;
+      background-color: #ff5733;
     }
 
     .container {
-      padding: 15px 20px;
-      margin-top: 70px;
+      padding: 15px;
+      margin-top: 60px;
     }
 
     .search-bar-container {
       position: sticky;
-      top: 70px;
+      top: 60px;
       z-index: 1000;
-      background-color: #f0f8ff;
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      background-color: #f4f4f9;
     }
 
     .search-bar {
-      flex-grow: 1;
+      width: calc(100% - 60px);
       padding: 12px;
-      margin-right: 10px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
       font-size: 1rem;
     }
 
     .reset-button {
-      background-color: #ff5722; /* Deep orange */
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: 0;
+      padding: 0 12px;
+      background-color: #ff5733;
       color: white;
       border: none;
-      padding: 10px 15px;
       cursor: pointer;
       font-size: 1rem;
-      border-radius: 8px;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
     }
 
     .item {
@@ -90,20 +87,29 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: flex-start;
-      padding: 15px;
-      border-radius: 8px;
+      padding: 12px;
+      border-radius: 5px;
       margin-bottom: 15px;
-      background-color: white;
+      background-color: #fff;
       cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .item:nth-child(even) {
-      background-color: #e3f2fd; /* Light blue */
+      background-color: #e9f5ff;
     }
 
-    .item:hover {
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    .item-details {
+      flex: 1;
+      margin-bottom: 10px;
+    }
+
+    .highlight {
+      color: #ff5733;
+      font-weight: bold;
+    }
+
+    .color-pts {
+      color: red;
     }
 
     .modal, .cart-modal {
@@ -126,35 +132,82 @@
       max-width: 400px;
       max-height: 80%;
       overflow-y: auto;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .modal-content label, .cart-modal-content label {
+      display: block;
+      margin-top: 10px;
+    }
+
+    .modal-content input, .cart-modal-content input {
+      width: 100%;
+      padding: 8px;
+      font-size: 1rem;
+      margin-top: 5px;
+    }
+
+    .modal-content input.narrow, .cart-modal-content input.narrow {
+      width: 6ch;
+    }
+
+    .radio-group {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-top: 10px;
+    }
+
+    .radio-group-inner {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
+    .radio-group-inner label {
+      display: flex;
+      align-items: center;
     }
 
     .buttons {
       display: flex;
       justify-content: center;
       gap: 10px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
     .button-text {
       font-size: 1rem;
-      color: white;
+      color: blue;
       font-weight: bold;
       cursor: pointer;
       border: none;
-      background: #2196f3; /* Bright blue */
-      padding: 10px 20px;
-      border-radius: 8px;
+      background: yellow;
+      padding: 10px;
+      border-radius: 50%;
     }
 
-    .button-text:hover {
-      opacity: 0.8;
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      font-weight: bold;
+      display: block;
+    }
+
+    .form-group input {
+      width: calc(100% - 10px);
+      padding: 8px;
+      font-size: 1rem;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
 
     @media (max-width: 600px) {
       header {
         font-size: 1.2rem;
-        padding: 10px;
       }
 
       .container {
@@ -162,6 +215,7 @@
       }
 
       .search-bar {
+        padding: 10px;
         font-size: 0.9rem;
       }
 
@@ -172,6 +226,15 @@
       .modal-content, .cart-modal-content {
         width: 90%;
       }
+
+      .modal-content input, .cart-modal-content input {
+        padding: 6px;
+        font-size: 0.9rem;
+      }
+
+      table {
+        font-size: 0.9rem;
+      }
     }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
@@ -179,40 +242,61 @@
 <body>
   <header>
     <div class="header-buttons">
-      <button onclick="newOrder()">🆕 New Order</button>
-      <span>📦 Ishwar Order System</span>
-      <button onclick="viewCart()">🛒 View Cart</button>
+      <button onclick="newOrder()">New Order</button>
+      Ishwar Order System
+      <button onclick="viewCart()">Cart</button>
     </div>
   </header>
   <div class="container">
     <div class="search-bar-container">
-      <input type="text" id="search" class="search-bar" placeholder="🔍 Search items...">
-      <button id="reset-search" class="reset-button" onclick="resetSearch()">🔄 Reset</button>
+      <input type="text" id="search" class="search-bar" placeholder="Search items...">
+      <button id="reset-search" class="reset-button" onclick="resetSearch()">Reset</button>
     </div>
     <div id="item-list"></div>
   </div>
 
   <div id="modal" class="modal">
     <div class="modal-content">
-      <h3>🛍️ Order Details</h3>
+      <h3>Order Details</h3>
       <div id="selected-item-details"></div>
       <label for="order-qty">Order Quantity:</label>
+      <input type="number" id="order-qty"
       <input type="number" id="order-qty" class="narrow" placeholder="000000" inputmode="numeric">
+      
+      <div class="radio-group">
+        <div class="radio-group-inner">
+          <label><input type="radio" name="unit" value="strips"> Strips</label>
+          <label><input type="radio" name="unit" value="pcs"> Pcs</label>
+          <label><input type="radio" name="unit" value="boxes" checked> Boxes</label>
+          <label><input type="radio" name="unit" value="cases"> Cases</label>
+        </div>
+      </div>
+
+      <label for="special-rate">Special Rate:</label>
+      <input type="number" id="special-rate" class="narrow" placeholder="000000" step="0.01" inputmode="decimal">
 
       <div class="buttons">
-        <button class="button-text" onclick="addToCart()">➕ Add to Cart</button>
-        <button class="button-text" onclick="closeModal()">❌ Cancel</button>
+        <button class="button-text" onclick="addToCart()">ADD TO CART</button>
+        <button class="button-text" onclick="closeModal()">CANCEL</button>
       </div>
     </div>
   </div>
 
   <div id="cart-modal" class="cart-modal">
     <div class="cart-modal-content">
-      <h3>🧾 Order Summary</h3>
+      <h3>Order Summary</h3>
+      <div class="form-group">
+        <label for="stockist-name">Stockist Name:</label>
+        <input type="text" id="stockist-name" placeholder="Enter stockist name...">
+      </div>
+      <div class="form-group">
+        <label for="salesman-name">Salesman Name:</label>
+        <input type="text" id="salesman-name" placeholder="Enter salesman name...">
+      </div>
       <div id="cart-items"></div>
       <div class="buttons">
-        <button class="button-text" onclick="closeCart()">❌ Close</button>
-        <button class="button-text" onclick="exportToPDF()">📤 Export</button>
+        <button class="button-text" onclick="closeCart()">CLOSE</button>
+        <button class="button-text" onclick="exportToPDF()">EXPORT TO PDF</button>
       </div>
     </div>
   </div>
@@ -229,18 +313,19 @@
         }
         return response.arrayBuffer();
       })
-      .then(dataBuffer => {
-        const workbook = XLSX.read(new Uint8Array(dataBuffer), { type: 'array' });
+      .then(data => {
+        const workbook = XLSX.read(new Uint8Array(data), { type: 'array' });
         const sheetName = workbook.SheetNames[0];
         const sheet = workbook.Sheets[sheetName];
-        const jsonData = XLSX.utils.sheet_to_json(sheet);
-        data = jsonData; // Store the data globally
-        displayItems(data); // Display the items after loading
+        const json = XLSX.utils.sheet_to_json(sheet);
+        json.sort((a, b) => a['Product Name'].localeCompare(b['Product Name'])); // Sort items alphabetically
+        displayItems(json);
       })
       .catch(error => console.error('Error fetching or parsing the Excel file:', error));
 
     // Display items
     function displayItems(items) {
+      data = items; // Store the items in the global data variable
       const itemList = document.getElementById('item-list');
       itemList.innerHTML = '';
       items.forEach(item => {
