--- a/index.html
+++ b/index.html
@@ -28,39 +28,23 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    .header-buttons button {
+    .header-buttons {
       display: flex;
       align-items: center;
-      gap: 8px;
-      background-color: #ff9800; /* Bright orange */
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
-      font-size: 1rem;
-      border-radius: 8px;
-    }
-
-    .header-buttons button:last-child {
-      background-color: #f44336; /* Bright red */
-    }
-
-    .header-buttons button:hover {
-      opacity: 0.9;
+      gap: 10px;
     }
 
     .container {
       padding: 15px 20px;
-      margin-top: 70px;
+      margin-top: 80px;
     }
 
     .search-bar-container {
-      position: sticky;
-      top: 70px;
-      z-index: 1000;
-      background-color: #f0f8ff;
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      margin-bottom: 15px;
+      background-color: #f0f8ff;
       padding: 10px;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -127,6 +111,39 @@
       max-height: 80%;
       overflow-y: auto;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .modal-content label, .cart-modal-content label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    .modal-content input, .cart-modal-content input {
+      width: 100%;
+      padding: 10px;
+      font-size: 1rem;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .modal-content input.narrow {
+      width: 100%;
+      padding: 12px;
+      font-size: 1.2rem;
+    }
+
+    .radio-group {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .radio-group label {
+      display: flex;
+      align-items: center;
+      margin-right: 10px;
     }
 
     .buttons {
@@ -197,10 +214,7 @@
       <h3>🛍️ Order Details</h3>
       <div id="selected-item-details"></div>
       <label for="order-qty">Order Quantity:</label>
-      <input type="number" id="order-qty" class="narrow" placeholder="000000" inputmode="numeric">
-
-      <label for="special-rate">Special Rate:</label>
-      <input type="number" id="special-rate" class="narrow" placeholder="000000" step="0.01" inputmode="decimal">
+      <input type="number" id="order-qty" class="narrow" placeholder="Enter quantity" inputmode="numeric">
 
       <div class="radio-group">
         <label><input type="radio" name="unit" value="strips"> Strips</label>
@@ -208,6 +222,9 @@
         <label><input type="radio" name="unit" value="boxes" checked> Boxes</label>
         <label><input type="radio" name="unit" value="cases"> Cases</label>
       </div>
+
+      <label for="special-rate">Special Rate:</label>
+      <input type="number" id="special-rate" class="narrow" placeholder="Enter special rate" step="0.01" inputmode="decimal">
 
       <div class="buttons">
         <button class="button-text" onclick="addToCart()">➕ Add to Cart</button>
@@ -260,9 +277,7 @@
           <div class="item-details">
             <strong>${item['Product Name']}</strong><br>
             <span>Stock: ${item['Current Stock']}</span><br>
-            <span>M.R.P.: ₹${parseFloat(item['M.R.P.']).toFixed(2)}</span><br>
             <span>Sales Price: ₹${parseFloat(item['Sales Price']).toFixed(2)}</span><br>
-            <span>Company: ${item['Company']}</span>
           </div>
         `;
         div.addEventListener('click', () => selectItem(item));
@@ -289,7 +304,8 @@
     function selectItem(item) {
       document.getElementById('selected-item-details').innerHTML = `
         <strong>${item['Product Name']}</strong><br>
-        <span>Pack: ${item['Pack']}</span> <span>Box: ${item['Box']}</span> <span>Shipper: ${item['Shipper']}</span>
+        <span>Stock: ${item['Current Stock']}</span><br>
+        <span>Sales Price: ₹${parseFloat(item['Sales Price']).toFixed(2)}</span><br>
       `;
       document.getElementById('order-qty').value = '';
       document.getElementById('special-rate').value = '';
