--- a/index.html
+++ b/index.html
@@ -293,14 +293,18 @@
     function displayItems(items) {
       const itemList = document.getElementById('item-list');
       itemList.innerHTML = '';
+      if (items.length === 0) {
+        itemList.innerHTML = '<p>No items found.</p>';
+        return;
+      }
       items.forEach(item => {
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
           <div class="item-details">
-            <strong>${item['Product Name']} <span class="stock">(${item['Current Stock']})</span></strong><br>
-            <span class="sales-price">Sales Price: ₹${parseFloat(item['Sales Price']).toFixed(2)}</span><br>
-            <span>MRP: ₹${parseFloat(item['M.R.P.']).toFixed(2)}</span>
+            <strong>${item['Product Name']} <span class="stock">(${item['Current Stock'] || 0})</span></strong><br>
+            <span class="sales-price">Sales Price: ₹${parseFloat(item['Sales Price'] || 0).toFixed(2)}</span><br>
+            <span>MRP: ₹${parseFloat(item['M.R.P.'] || 0).toFixed(2)}</span>
           </div>
         `;
         div.addEventListener('click', () => selectItem(item));
@@ -312,7 +316,7 @@
     document.getElementById('search').addEventListener('input', function() {
       const query = this.value.toLowerCase();
       const filteredData = data.filter(item =>
-        item['Product Name'].toLowerCase().includes(query)
+        item['Product Name'] && item['Product Name'].toLowerCase().includes(query)
       );
       displayItems(filteredData); // Display only the filtered data
     });
@@ -327,8 +331,8 @@
     function selectItem(item) {
       document.getElementById('selected-item-details').innerHTML = `
         <strong>${item['Product Name']}</strong><br>
-        <span class="stock">Stock: ${item['Current Stock']}</span><br>
-        <span class="sales-price">Sales Price: ₹${parseFloat(item['Sales Price']).toFixed(2)}</span><br>
+        <span class="stock">Stock: ${item['Current Stock'] || 0}</span><br>
+        <span class="sales-price">Sales Price: ₹${parseFloat(item['Sales Price'] || 0).toFixed(2)}</span><br>
       `;
       document.getElementById('order-qty').value = '';
       document.getElementById('special-rate').value = '';
@@ -351,66 +355,68 @@
       document.getElementById('modal').style.display = 'none';
     }
 
- // View cart
-function viewCart() {
-  const cartItems = document.getElementById('cart-items');
-  cartItems.innerHTML = '';
-  cart.forEach((item, index) => {
-    const { itemDetails, qty, rate, unit } = item;
-    const rateDisplay = rate ? `<span style="color: green;">Special Rate: ₹${rate.toFixed(2)}</span>` : '';
-    const div = document.createElement('div');
-    div.className = 'cart-item';
-    div.innerHTML = `
-      <div class="cart-item-details">
-        ${index + 1}. ${itemDetails.split('<br>')[0]} - <span style="color: red;">Qty: ${qty} ${unit}</span> ${rateDisplay}
-        <br><span class="sales-price">${itemDetails.match(/Sales Price: ₹\d+\.\d+/)[0]}</span>
-      </div>
-    `;
-    cartItems.appendChild(div);
-  });
-  document.getElementById('cart-modal').style.display = 'flex';
-}
+    // View cart
+    function viewCart() {
+      const cartItems = document.getElementById('cart-items');
+      cartItems.innerHTML = '';
+      cart.forEach((item, index) => {
+        const { itemDetails, qty, rate, unit } = item;
+        const rateDisplay = rate ? `<span style="color: green;">Special Rate: ₹${rate.toFixed(2)}</span>` : '';
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerHTML = `
+          <div class="cart-item-details">
+            ${index + 1}. ${itemDetails.split('<br>')[0]} - <span style="color: red;">Qty: ${qty} ${unit}</span> ${rateDisplay}
+            <br><span class="sales-price">${itemDetails.match(/Sales Price: ₹\d+\.\d+/)[0]}</span>
+          </div>
+        `;
+        cartItems.appendChild(div);
+      });
+      document.getElementById('cart-modal').style.display = 'flex';
+    }
 
-// Close cart
-function closeCart() {
-  document.getElementById('cart-modal').style.display = 'none';
-}
+    // Close cart
+    function closeCart() {
+      document.getElementById('cart-modal').style.display = 'none';
+    }
 
-// New order
-function newOrder() {
-  cart = [];
-  document.getElementById('party-name').value = '';
-  document.getElementById('salesman-name').value = '';
-  closeCart();
-  alert("New order started. Cart cleared.");
-}
+    // New order
+    function newOrder() {
+      cart = [];
+      document.getElementById('party-name').value = '';
+      document.getElementById('salesman-name').value = '';
+      closeCart();
+      alert("New order started. Cart cleared.");
+    }
 
-// Export to PDF
-function exportToPDF() {
-  const partyName = document.getElementById('party-name').value;
-  const salesmanName = document.getElementById('salesman-name').value;
-  const cartContent = document.getElementById('cart-items').innerHTML;
-  const date = new Date().toLocaleDateString('en-IN', {
-    day: '2-digit',
-    month: 'long',
-    year: 'numeric',
-  });
-  const win = window.open('', '', 'height=700,width=700');
-  win.document.write('<html><head><title>Order Summary</title>');
-  win.document.write('</head><body>');
-  win.document.write('<h3>Order Summary (' + date + ')</h3>');
-  win.document.write('<p><strong>Name of Party:</strong> ' + partyName + '</p>');
-  win.document.write('<p><strong>Name of Salesman:</strong> ' + salesmanName + '</p>');
-  win.document.write(cartContent);
-  win.document.write('</body></html>');
-  win.document.close();
-  win.print();
-}
+    // Export to PDF
+    function exportToPDF() {
+      const partyName = document.getElementById('party-name').value;
+      const salesmanName = document.getElementById('salesman-name').value;
+      const cartContent = document.getElementById('cart-items').innerHTML;
+      const date = new Date().toLocaleDateString('en-IN', {
+        day: '2-digit',
+        month: 'long',
+        year: 'numeric',
+      });
+      const win = window.open('', '', 'height=700,width=700');
+      win.document.write('<html><head><title>Order Summary</title>');
+      win.document.write('</head><body>');
+      win.document.write('<h3>Order Summary (' + date + ')</h3>');
+      win.document.write('<p><strong>Name of Party:</strong> ' + partyName + '</p>');
+      win.document.write('<p><strong>Name of Salesman:</strong> ' + salesmanName + '</p>');
+      win.document.write(cartContent);
+      win.document.write('</body></html>');
+      win.document.close();
+      win.print();
+    }
 
-// Set current date in Order Summary
-document.getElementById('current-date').textContent = new Date().toLocaleDateString('en-IN', {
-  day: '2-digit',
-  month: 'long',
-  year: 'numeric',
-});
-
+    // Set current date in Order Summary
+    document.getElementById('current-date').textContent = new Date().toLocaleDateString('en-IN', {
+      day: '2-digit',
+      month: 'long',
+      year: 'numeric',
+    });
+  </script>
+</body>
+</html>
