--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <label for="party-name">Name of Party:</label>
         <input type="text" id="party-name" placeholder="Enter party name">
       </div>
-      <div class="form-group">
+      <div class="form-group" style="margin-bottom: 20px;">
         <label for="salesman-name">Name of Salesman:</label>
         <input type="text" id="salesman-name" placeholder="Enter salesman name">
       </div>
@@ -355,77 +355,79 @@
       document.getElementById('modal').style.display = 'none';
     }
 
-   // View cart
-function viewCart() {
-  const cartItems = document.getElementById('cart-items');
-  cartItems.innerHTML = '';
+    // View cart
+    function viewCart() {
+      const cartItems = document.getElementById('cart-items');
+      cartItems.innerHTML = '';
 
-  cart.forEach((item, index) => {
-    const { itemDetails, qty, rate, unit } = item;
-    const productName = itemDetails.split('<br>')[0];
-    const salePrice = itemDetails.match(/Sales Price: ₹\d+\.\d+/)[0].replace('Sales Price: ', '');
-    const rateDisplay = rate ? `@ ₹${rate.toFixed(2)}` : `@ ${salePrice}`;
+      cart.forEach((item, index) => {
+        const { itemDetails, qty, rate, unit } = item;
+        const productName = itemDetails.split('<br>')[0];
+        const salePrice = itemDetails.match(/Sales Price: ₹\d+\.\d+/)[0].replace('Sales Price: ', '');
+        const rateDisplay = rate ? `@ ₹${rate.toFixed(2)}` : `@ ${salePrice}`;
 
-    const div = document.createElement('div');
-    div.className = 'cart-item';
-    div.style.marginBottom = '10px'; // Add space between items
-    div.innerHTML = `
-      <div class="cart-item-details" style="margin-bottom: 10px;">
-        <span style="font-weight: bold; color: #4caf50;">${index + 1}. ${productName}</span><br>
-        <span style="color: #ff5722;">Qty: ${qty} ${unit} ${rateDisplay}</span>
-      </div>
-    `;
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.style.marginBottom = '10px'; // Add space between items
+        div.innerHTML = `
+          <div class="cart-item-details" style="margin-bottom: 10px;">
+            <span style="font-weight: bold; color: #4caf50;">${index + 1}. ${productName}</span><br>
+                       <span style="color: #ff5722;">Qty: ${qty} ${unit} ${rateDisplay}</span>
+          </div>
+        `;
+        cartItems.appendChild(div);
+      });
 
-    cartItems.appendChild(div);
-  });
+      // Add spacing between Salesman Name and the first item
+      const cartModalContent = document.querySelector('.cart-modal-content');
+      cartModalContent.style.paddingBottom = '20px';
 
-  // Add spacing between Salesman Name and the first item
-  const cartModalContent = document.querySelector('.cart-modal-content');
-  cartModalContent.style.paddingBottom = '20px';
+      document.getElementById('cart-modal').style.display = 'flex';
+    }
 
-  document.getElementById('cart-modal').style.display = 'flex';
-}
+    // Close cart
+    function closeCart() {
+      document.getElementById('cart-modal').style.display = 'none';
+    }
 
-// Close cart
-function closeCart() {
-  document.getElementById('cart-modal').style.display = 'none';
-}
+    // New order
+    function newOrder() {
+      cart = [];
+      document.getElementById('party-name').value = '';
+      document.getElementById('salesman-name').value = '';
+      closeCart();
+      alert("New order started. Cart cleared.");
+    }
 
-// New order
-function newOrder() {
-  cart = [];
-  document.getElementById('party-name').value = '';
-  document.getElementById('salesman-name').value = '';
-  closeCart();
-  alert("New order started. Cart cleared.");
-}
+    // Export to PDF
+    function exportToPDF() {
+      const partyName = document.getElementById('party-name').value;
+      const salesmanName = document.getElementById('salesman-name').value;
+      const cartContent = document.getElementById('cart-items').innerHTML;
+      const date = new Date().toLocaleDateString('en-IN', {
+        day: '2-digit',
+        month: 'long',
+        year: 'numeric',
+      });
+      const win = window.open('', '', 'height=700,width=700');
+      win.document.write('<html><head><title>Order Summary</title>');
+      win.document.write('</head><body>');
+      win.document.write('<h3>Order Summary (' + date + ')</h3>');
+      win.document.write('<p><strong>Name of Party:</strong> ' + partyName + '</p>');
+      win.document.write('<p><strong>Name of Salesman:</strong> ' + salesmanName + '</p>');
+      win.document.write(cartContent);
+      win.document.write('</body></html>');
+      win.document.close();
+      win.print();
+    }
 
-// Export to PDF
-function exportToPDF() {
-  const partyName = document.getElementById('party-name').value;
-  const salesmanName = document.getElementById('salesman-name').value;
-  const cartContent = document.getElementById('cart-items').innerHTML;
-  const date = new Date().toLocaleDateString('en-IN', {
-    day: '2-digit',
-    month: 'long',
-    year: 'numeric',
-  });
-  const win = window.open('', '', 'height=700,width=700');
-  win.document.write('<html><head><title>Order Summary</title>');
-  win.document.write('</head><body>');
-  win.document.write('<h3>Order Summary (' + date + ')</h3>');
-  win.document.write('<p><strong>Name of Party:</strong> ' + partyName + '</p>');
-  win.document.write('<p><strong>Name of Salesman:</strong> ' + salesmanName + '</p>');
-  win.document.write(cartContent);
-  win.document.write('</body></html>');
-  win.document.close();
-  win.print();
-}
-
-// Set current date in Order Summary
-document.getElementById('current-date').textContent = new Date().toLocaleDateString('en-IN', {
-  day: '2-digit',
-  month: 'long',
-  year: 'numeric',
-});
+    // Set current date in Order Summary
+    document.getElementById('current-date').textContent = new Date().toLocaleDateString('en-IN', {
+      day: '2-digit',
+      month: 'long',
+      year: 'numeric',
+    });
+  </script>
+</body>
+</html>
 
